--- a/Mongo/pom.xml
+++ b/Mongo/pom.xml
@@ -25,6 +25,20 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.11.1</version> <!-- Check for latest version -->
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-api</artifactId>
+    <version>5.11.4</version>
+    <scope>test</scope>
+</dependency>
+<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-engine</artifactId>
+    <version>5.11.4</version>
+    <scope>test</scope>
+</dependency>
     </dependencies>
 
     <build>
