--- a/Mongo/pom.xml
+++ b/Mongo/pom.xml
@@ -49,7 +49,7 @@
             <version>3.1.0</version>
             <configuration>
                 <!-- hier die Main-Methode setzen -->
-                <mainClass>fhwedel.Mongo.CRUDclient</mainClass> 
+                <mainClass>fhwedel.Mongo.Migration</mainClass> 
             </configuration>
         </plugin>
     </plugins>
